--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
  <app-header [data] = "data" [sample]="sample"></app-header>
  <app-main-menu></app-main-menu>
  <button (click)="Increment()">Head</button>
- <button (click)="changeData()">next</button> 
+ <button (click)="changeData()">next1224</button> 
  <router-outlet></router-outlet> 
  <app-footer></app-footer>
  
